fixing top nav on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -269,7 +269,7 @@ ul {
       @include media($mobile){
         @include span-columns(6);
       }
-      height: 50px;
+      height: 75px;
       z-index: 999;
       margin-top: 0px;
       margin-left: 0px;
